# Long-Trainer

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  app.py  bot.py  cli-test.yaml  doc_retrieval.py  loaders.py  long_trainer.py  main.py  pyproject.toml  requirements (1).txt  requirements.txt  setup.py  sitemap.xml  vision_bot.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml  release.yml
Requesting Code/: API.py  testing.ipynb
creating_instance/: index.html
creating_using_bot/: index.html
db_bot-807aa002-dcbd-409f-8043-c4cae62114e4/: index.faiss  index.pkl
docs/: mkdocs.yml
docs/docs/: about.md  agent_mode.md  chat_management.md  cli_api.md  creating_instance.md  creating_using_bot.md  deleting_bot.md  index.md  installation.md  integrating_embeddings.md  integrating_llms.md  migration.md  supported_formats.md  updating_bots.md
docs/site/: 404.html  index.html
docs/site/about/: index.html
docs/site/chat_management/: index.html
docs/site/deleting_bot/: index.html
docs/site/integrating_embeddings/: index.html
docs/site/search/: search_index.json
docs/site/stylesheets/: extra.css
docs/site/supported_formats/: index.html
docs/site/updating_bots/: index.html
installation/: index.html
integrating_llms/: index.html
longtrainer/: __init__.py  api.py  bot.py  chat.py  cli.py  config.py  documents.py  loaders.py  models.py  retrieval.py  storage.py  structured.py  tools.py  trainer.py  utils.py  vectorstores.py  vision_bot.py  vision_normalizer.py
longtrainer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_01_imports.py  test_02_loaders.py  test_03_tools.py  test_04_bot_architecture.py  test_05_cli.py  test_06_api.py  test_07_advanced_loaders.py  test_08_dynamic_tools.py  test_09_phase3.py
