[project]
name = "longtrainer"
version = "1.0.0"
description = "Production-Ready RAG Framework — Multi-tenant bots, streaming, tools, and persistent memory"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Endevsols", email = "technology@endevsols.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langchain>=0.3.14",
    "langchain-core>=0.3.30",
    "langchain-community>=0.3.14",
    "langchain-openai>=0.3.4",
    "langchain-text-splitters>=0.3.0",
    "langchain-unstructured>=0.2.0",
    "faiss-cpu>=1.9.0",
    "pymongo>=4.10",
    "cryptography>=44.0",
    "tiktoken>=0.8",
    "duckduckgo-search>=7.0",
    "pypdf>=5.1",
    "docx2txt>=0.8",
    "python-docx>=1.1",
    "python-magic>=0.4",
    "unstructured[all-docs]>=0.18",
    "youtube-transcript-api>=1.0",
    "pytube>=15.0",
    "wikipedia>=1.4",
    "pandas>=2.2",
    "pydantic>=2.9",
]

[project.optional-dependencies]
agent = ["langgraph>=0.3.10"]
api = ["fastapi>=0.115", "uvicorn>=0.32"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.9"]

[project.urls]
Homepage = "https://github.com/ENDEVSOLS/Long-Trainer"
Documentation = "https://endevsols.github.io/Long-Trainer/"
Repository = "https://github.com/ENDEVSOLS/Long-Trainer"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["longtrainer"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
